# StyleMe

./: .gitignore  PRD.md  README.md  Run-local.md  setup.sh
StyleMe/: .gitignore
StyleMe/StyleMe/: ChatView.swift  ContentView.swift  Models.swift  Persistence.swift  Services.swift  StyleMeApp.swift  Theme.swift  UploadView.swift  WardrobeView.swift
StyleMe/StyleMe.xcodeproj/: project.pbxproj
StyleMe/StyleMe/StyleMe.xcdatamodeld/: .xccurrentversion
StyleMe/StyleMeTests/: StyleMeTests.swift
StyleMe/StyleMeUITests/: StyleMeUITests.swift  StyleMeUITestsLaunchTests.swift
backend/: .env.example  .gitignore  README.md  auth.py  config.py  identity_face.py  main.py  outfit_tryon.py  pyproject.toml  segmentor.py  user_profile.py
backend/core/: auth.py  config.py
backend/models/: event.py  garment.py  outfit.py  user.py
backend/routers/: auth_router.py  chat_router.py  health_router.py  inspect_router.py  preferences_router.py  recommend_router.py  segment_router.py  store_router.py  tryon_router.py  upload_router.py  wardrobe_router.py
backend/scripts/: seed_wardrobe.py
backend/services/: annotator.py  chat.py  embedder.py  identity.py  ingest.py  learning.py  local_cache.py  profile.py  scraper.py  segmentor.py  stylist.py  tryon.py  wardrobe.py
docs/: SAM3.md
docs/plans/: 2026-04-05-onboarding-better-auth.md
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/scripts/: ensure-env.js
frontend/src/: instrumentation.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/inspect/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/onboard/: page.tsx
frontend/src/components/: AppNav.tsx  SegmentPlayground.tsx  TryOnPlayground.tsx  UploadPlayground.tsx
frontend/src/lib/: api.ts  auth-server.ts  auth.ts  types.ts
website/: README.md  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
(+17 files in other folders)
